--- a/styles/calculator.css
+++ b/styles/calculator.css
@@ -12,12 +12,25 @@ body {
     background: linear-gradient(to right, #00AAFF, #00FF6C);
 }
 
-.contain {
+.father {
     display: flex;
     justify-content: center;
     align-items: center;
-    position: center;
 }
+
+
+/* position: relative;
+    border: 1px solid #FFFF00; */
+
+
+/* .child {} */
+
+
+/* position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    padding: 10px; */
 
 .calculator-grid {
     display: grid;
