--- a/styles/calculator.css
+++ b/styles/calculator.css
@@ -35,6 +35,7 @@ body {
 .calculator-grid {
     display: grid;
     justify-content: center;
+    max-height: 100vh;
     align-content: center;
     grid-template-columns: repeat(4, 100px);
     grid-template-rows: minmax(120px, auto) repeat(5, 100px);
