--- a/styles/calculator.css
+++ b/styles/calculator.css
@@ -10,6 +10,8 @@ body {
     padding: 0;
     margin: 0;
     background: linear-gradient(to right, #00AAFF, #00FF6C);
+    background-image: repeating-radial-gradient(red, yellow 10%, green 15%);
+    background: radial-gradient(red, yellow, green);
 }
 
 .father {
